--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@
 .sub-tit {
   font-size: 2rem;
   font-weight: bold;
-  width:20%;
+  width: 20%;
 }
 .work-txt {
   flex: 1;
@@ -69,9 +69,6 @@
   line-height: 180%;
   color: #666666;
 }
-
-
-
 
 .li-type1 {
   font-size: 1.8rem;
@@ -105,11 +102,10 @@
   width: 45%;
 }
 
-
 /* 날짜 */
-.date{
-  color:grey;
-  font-size:16px;
+.date {
+  color: grey;
+  font-size: 16px;
 }
 
 /* 버튼 */
@@ -128,7 +124,6 @@
   cursor: pointer;
 }
 
-
 /* 교육과정 팝업창 */
 .vid-popup {
   position: fixed;
@@ -137,21 +132,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width:0;
+  width: 0;
   /* 높이0으로 해서 안보이게 */
-  height:100vh;
-  background: #D8E0A5;
+  height: 100vh;
+  background: #d8e0a5;
   z-index: 99999;
   flex-direction: column;
   /* 비디오 열고 닫을때 효과 */
-      transition: width 0.5s ease-in-out;
-
- 
+  transition: width 0.5s ease-in-out;
 }
 
 .vid-popup.on {
-
- width:100%;
+  width: 100%;
 }
 
 .vid-popup .close-btn {
@@ -166,7 +158,6 @@
   position: absolute;
   bottom: 100px;
 }
-
 
 /* 교육내용 표 */
 .vid-popup table {
@@ -184,7 +175,6 @@
 .vid-popup table tr .t4 {
   border-right: 1px solid #0e298f;
 }
-
 
 .vid-popup table tr th {
   text-align: center;
@@ -205,14 +195,245 @@
   border-right: 1px solid #0e298f;
 }
 
-
-
 /* 기술 */
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
-.tg .tg-7btt{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+.skill-logo {
+  height: 30px;
+  margin-right: 5px;
+}
+
+.tg {
+  font-size: 1.8rem;
+  border-collapse: collapse;
+  border-spacing: 0;
+  text-align: left;
+}
+.tg td {
+  border: 1px solid #c8c8c8;
+  padding: 10px 0 10px 20px;
+  word-break: normal;
+  line-height: 30px;
+}
+.tg th {
+  text-align: center;
+  border: 1px solid #c8c8c8;
+  font-weight: bold;
+  padding: 20px 0;
+  background-color: #f6f6f6;
+}
+
+.tg .left-th {
+  width: 15%;
+}
+
+.tg .skill {
+  line-height: 40px;
+  width: 15%;
+}
+#pg4 .main-tit {
+  position: relative;
+  padding-bottom: 0;
+}
+
+#pg4 .main-tit:before {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 5px;
+  background: #7ccc35;
+  left: 50%;
+  top: 130px;
+  transform: translate(-50%, 0);
+}
+
+#pg4 .tit-desc {
+  padding-top: 80px;
+  color: #333;
+  font-size: 1.8rem;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+/* 프트폴리오 */
+/* 카테고리 */
+#bo_cate ul {
+  margin-bottom: 70px;
+  padding-left: 1px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  vertical-align: middle;
+}
+#bo_cate li {
+  padding-bottom: 10px;
+}
+
+#bo_cate a {
+  cursor: pointer;
+  color: #154726;
+  display: block;
+  padding: 4px 0;
+  margin: 0 17.5px;
+  font-size: 20px;
+}
+
+#bo_cate #bo_cate_on {
+  z-index: 2;
+  padding: 7px 15px;
+  background: #7ccc35;
+  border-radius: 50px;
+  color: #fff;
+}
+
+/* 리스트 */
+
+.board_newgallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3%;
+}
+
+.board_newgallery li {
+  list-style: none;
+  margin-bottom: 30px;
+  position: relative;
+  width: 31.3%;
+}
+
+.board_newgallery * {
+  transition: all 0.3s ease-out;
+}
+
+.board_newgallery li .image {
+  overflow: hidden;
+  position: relative;
+  background-color: #000;
+  border-radius: 20px;
+}
+
+.board_newgallery dl.info {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.board_newgallery .image a {
+  display: block;
+  height: 300px;
+  width: 100%;
+}
+
+.board_newgallery li .image span {
+  align-items: center;
+  background: #7ccc35;
+  border-radius: 50px;
+  color: #fff;
+  display: flex;
+  font-size: 14px;
+  height: 30px;
+  justify-content: center;
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  width: 76px;
+}
+
+.board_newgallery dl.info dt.subject {
+  word-wrap: normal;
+  color: #000;
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.board_newgallery dl.info dd.content {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  color: #9b9b9b;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* 연락처 */
+#pg5 .wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ 
+}
+
+/* 왼쪽영역 */
+
+#pg5 .wrap .left{
+  width:50%;
+}
+.sub-tit3 {
+  margin-bottom: 50px;
+  text-align: center;
+}
+.sub-tit3 h5 {
+  font-size: 3rem;
+  margin-bottom: 50px;
+  font-weight: bold;
+  line-height: 45px;
+  position: relative;
+}
+
+.sub-tit3 h5:before {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 5px;
+  background: #7ccc35;
+  left: 50%;
+  top: 100px;
+  transform: translate(-50%, 0);
+
+
+}
+.sub-tit3 p {
+  font-size: 1.8rem;
+  color: #666;
+  line-height: 33px;
+}
+
+.contact-li{
+  background-color: #f1f1f1;
+  box-sizing: border-box;
+    padding: 20px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.contact-item {
+  margin-bottom: 15px;
+  text-align: center;
+  font-size: 1.8rem;
+}
+.contact-item span{
+  margin-left: 10px;
+ 
+}
+.contact-item a{
+  margin-left: 10px;
+
+}
+
+
+.fa{
+  font-size: 20px;
+  color:#7ccc35;
+ 
+}
+
+/* 오른쪽 영역 */
+#pg5 .wrap .right{
+  width:45%;
+}
+
+.map iframe{
+  width: 100%;
+}
+
